# dope

dope/: AUTHORS  Makefile  Makefile.am  README  TODO  bootstrap.sh  configure.ac  configure.in
dope/boost/: Makefile.am
dope/boost/type_traits/: Makefile.am
dope/config/: Makefile.am  autogen.sh
dope/config/m4/: Makefile.am  dope.m4
dope/doc/: Doxyfile.in  Makefile.am  index.html
dope/dope/: Makefile.am  adapter2to1.h  arch.h.in  argvparser.h  bswap.h  debug.h  dom.cpp  dom.h  dope.cpp  dope.h  dope.h.in  dopeexcept.h  dopesignal.h  dopestl.h  giop.h  layer1.h  layer2.h  manip.h  minihttp.h  minixml.h  namemanip.h  nbostream.h  network.cpp  network.h  objectfactory.h  raw.h  saxwrapper.h  smartptr.h  socket.cpp  socket.h  streamtraits.h  timestamp.cpp  timestamp.h  typenames.h  uri.cpp  uri.h  utils.h  xml.h  xmldominstream.h  xmldomoutstream.h  (+3 more)
dope/experiments/: bug2.cpp  consttest.cpp  namespaceandtemplate.cpp  nextversion.cpp  opandnamespace.cpp  optest.cpp  pipe.cpp  test-const-special.cpp  test-derived-special.cpp  test-strstream.cpp  teststreamstate.cpp  traits.cpp  virtualtemplate.cpp  warn.cpp  workaround.cpp
dope/experiments/bugreport/: bug.cpp  report
dope/limbo/: RELEASE-PROCESS  release.sh
dope/scripts/: Makefile.am  dope-config.in
dope/tests/: Makefile.am  test-argvparser.cpp  test-common.h  test-debug.cpp  test-dom.cpp  test-httppost.cpp  test-nbo.cpp  test-raw.cpp  test-rpc.cpp  test-saxwrapper.cpp  test-signal.cpp  test-streambuf.cpp  test-timestamp.cpp  test-xml.cpp  test-xmlrpc.cpp
