ttincludedir = $(includedir)/@PACKAGE@-@VERSION@/boost/type_traits

ttinclude_HEADERS = \
	alignment_traits.hpp \
	arithmetic_traits.hpp \
	composite_traits.hpp \
	conversion_traits.hpp \
	cv_traits.hpp \
	function_traits.hpp \
	fwd.hpp \
	ice.hpp \
	object_traits.hpp \
	same_traits.hpp \
	transform_traits.hpp \
	transform_traits_spec.hpp \
	type_traits_test.hpp

# EXTRA_DIST = $(ttinclude_HEADERS)
